--- a/css/files.css
+++ b/css/files.css
@@ -1,18 +1,17 @@
-/* Table of times I'm avalible */
-#schedule{
+#files_table{
   border-collapse: collapse;
   border: 1px solid #dddddd;
-  width: 75%;
+  width: 50%;
   text-align: left;
-  transform: translateX(12.5%);
+  transform: translateX(50%);
 }
 
-#schedule td, th {
+#files_table td, th {
   border: 1px solid #000000;
   text-align: left;
   padding: 8px;
 }
 
-#schedule tr:nth-child(even){
+#files_table tr:nth-child(even){
   background-color: #dddddd;
 }
