--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         <tr>
           <td>SI Session</td>
           <td>Tuesday</td>
-          <td>WILYC215</td>
+          <td>SHRV 113A</td>
           <td>6:30-7:30</td>
         </tr>
         <tr>
@@ -46,7 +46,7 @@
           <td>Office Hours</td>
           <td>Friday</td>
           <td>WILY C215</td>
-          <td>2:00-2:30</td>
+          <td>3:30-4:30</td>
         </tr>
       </table>
     </div>
