--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>SI Resorces</title>
-  <link rel="stylesheet" href= "{{url_for('static', filename='css/master.css')}}">
-  <link rel="stylesheet" href= "{{url_for('static', filename='css/myBtn.css')}}">
-  <link rel="stylesheet" href= "{{url_for('static', filename='css/schedule.css')}}">
-  <link rel="stylesheet" href= "{{url_for('static', filename='css/files.css')}}">
+
+  <link rel="icon" href="{{url_for('static', filename='res/img/purdue_p.png')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/myBtn.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/schedule.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/files.css')}}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="{{url_for('static', filename='js/functionality.js')}}"></script>
 </head>
@@ -70,7 +73,11 @@
         Insert Text here!!
       </p>
     </div>
-  </div>
 
+    <!--
+      <a href="{{url_for('static', filename='css/master.css')}}" download>Here!!</a>
+    -->
+  </div>
 </body>
+
 </html>
