Adds return button to control page

--- a/templates/control.html
+++ b/templates/control.html
@@ -34,7 +34,9 @@
     </div>
 
     <div class="Return">
-
+        <h2>Return to Homepage</h2>
+        <hr>
+        <a href='/'><button>Return</button></a>
     </div>
 </body>
 
