--- a/templates/control.html
+++ b/templates/control.html
@@ -9,19 +9,18 @@
 
 <body>
     <h1>Welcome to the Control Portal!</h1>
-    <hr>
-
+    
     <div class="Upload">
-        <h2>Upload file</h2>
+        <hr>
+        <h2>Upload File</h2>
         <hr>
 
         <form action="/control" method="POST" enctype="multipart/form-data">
 
             <div class="form-group">
-                <label>Select file</label>
+                <label>Select a File</label>
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" name="image" id="image">
-                    <label class="custom-file-label" for="image">Select image...</label>
+                    <input type="file" name="upload" id="upload">
                 </div>
             </div>
 
@@ -29,11 +28,25 @@
         </form>
     </div>
 
-    <div class="Delete">
+    <div class="Remove">
+        <hr>
+        <h2>Remove File</h2>
+        <hr>
 
+        <form action="/control" method="POST" enctype="multipart/form-data">
+            <div class="form-group">
+                <label>Type a File Name</label>
+                <div class="custom-file">
+                    <input type="text" placeholder="example.txt" name="filename" id="filename">
+                </div>
+            </div>
+
+            <button type="submit">Remove</button>
+        </form>
     </div>
 
     <div class="Return">
+        <hr>
         <h2>Return to Homepage</h2>
         <hr>
         <a href='/'><button>Return</button></a>
