adds auth required for control page

--- a/templates/control.html
+++ b/templates/control.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <h1>Welcome to the Control Portal!</h1>
-    
+    <h1>Welcome to the Matt SI Control Portal!</h1>
+    <hr>
+
     <div class="Upload">
-        <hr>
         <h2>Upload File</h2>
         <hr>
 
@@ -29,7 +29,6 @@
     </div>
 
     <div class="Remove">
-        <hr>
         <h2>Remove File</h2>
         <hr>
 
@@ -46,7 +45,6 @@
     </div>
 
     <div class="Return">
-        <hr>
         <h2>Return to Homepage</h2>
         <hr>
         <a href='/'><button>Return</button></a>
