Changes content of index

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
         <p>
           This whole website is basically held together with rubber bands and string, so if you come across anythingthat
           seems wrong, or you would like to suggest improvements for future development, please feel free to
-          contact me via email at <strong>matthewdroztextra@gmail.com</strong>. Your support helps makes this resource
+          contact me via email at <strong>mattdroztsi159@gmail.com</strong>. Your support helps makes this resource
           better!
         </p>
 
