--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="section-top">
     <div class="content">
-      <h1>Matt's SI Resorces</h1>
+      <h1>Matt's SI Resources</h1>
       <button onClick="JavaScript:scrollPage()" id="myBtn">Go to Contents</button>
     </div>
   </div>
