--- a/templates/control.html
+++ b/templates/control.html
@@ -42,6 +42,8 @@
 
             <button type="submit">Remove</button>
         </form>
+
+        <h3><u>Files to Remove</u></h3>
     </div>
 
     <div class="Return">
