--- a/templates/control.html
+++ b/templates/control.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>SI Upload</title>
     <link rel="icon" href="{{url_for('static', filename='res/img/purdue_p.png')}}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="{{url_for('static', filename='js/control.js')}}"></script>
 </head>
 
 <body>
@@ -42,8 +44,9 @@
 
             <button type="submit">Remove</button>
         </form>
-
-        <h3><u>Files to Remove</u></h3>
+        <div class="list" id="list">
+            <h3><u>Removable Files</u></h3>
+        </div>
     </div>
 
     <div class="Return">
@@ -51,6 +54,7 @@
         <hr>
         <a href='/'><button>Return</button></a>
     </div>
+    <script>placeFiles()</script>
 </body>
 
 </html>
