Creates list of files on control page

--- a/templates/control.html
+++ b/templates/control.html
@@ -44,8 +44,10 @@
 
             <button type="submit">Remove</button>
         </form>
-        <div class="list" id="list">
+        <div class="listFiles">
             <h3><u>Removable Files</u></h3>
+            <ul id="list">
+            </ul>
         </div>
     </div>
 
