Generates a checklist dynamically

--- a/templates/control.html
+++ b/templates/control.html
@@ -34,24 +34,15 @@
         <h2>Remove File</h2>
         <hr>
 
-        <form action="/control" method="POST">
-            <!-- <div class="form-group">
-                <label>Type a File Name</label>
-                <div class="custom-file">
-                    <input type="text" placeholder="example.txt" name="filename" id="filename">
-                </div>
-            </div> -->
+        <form action="/control" method="POST" id="removablelist">
+            <!-- <input type="checkbox" id="blah0" name="filename" value="bruh.txt">
+            <label for="blah0"> bruh.txt</label><br>
 
-            <input type="checkbox" id="filename" name="filename" value="yo.txt">
-            <label for="filename"> yo.txt</label><br><br>
+            <input type="checkbox" id="blah1" name="filename" value="yo.txt">
+            <label for="blah1"> yo.txt</label><br><br> -->
 
-            <button type="submit">Remove</button>
+            <button type="submit">Remove</button><br>
         </form>
-        <div class="listFiles">
-            <h3><u>Removable Files</u></h3>
-            <ul id="list">
-            </ul>
-        </div>
     </div>
 
     <div class="Return">
