Allows user to delete multiple files

--- a/templates/control.html
+++ b/templates/control.html
@@ -33,9 +33,9 @@
     <div class="Remove">
         <h2>Remove File</h2>
         <hr>
-
         <form action="/control" method="POST" id="removablelist">
             <button type="submit">Remove</button><br>
+            <input type="hidden" id="delete" name="delete" value="1">
         </form>
     </div>
 
