--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,7 @@
 
 <body>
   <div class="section-top">
-    <div class="content">
-      <h1>Matt's SI Resources</h1>
+    <div class="content" id="title">
       <button onClick="JavaScript:scrollPage()" id="myBtn">Go to Contents</button>
     </div>
   </div>
