Schedule Table title is changed accordign to json

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
   <div class="section-bottom" id="body">
     <div class="schedule">
-      <h1>Matt's Schedule</h1>
+      <h1 id="schedule_title"></h1>
       <hr>
       <table id="schedule">
         <tr>
