--- a/templates/edit-design.html
+++ b/templates/edit-design.html
@@ -18,6 +18,11 @@
         <br><br>
         <button type="submit">Submit Changes</button>
     </form>
+    <div id="ReturnToControl">
+        <h2>Return To Control</h2>
+        <hr>
+        <a href="/control"><button>Go There Now</button></a>
+    </div>
     <script>populate_design_sheet()</script>
 </body>
 
