--- a/templates/index.html
+++ b/templates/index.html
@@ -49,17 +49,11 @@
     </div>
 
     <div class="message" id="message">
-      <h1>Get in Contact</h1>
+      <h1 id="messageTitle"></h1>
       <hr>
       <div id="messageNote">
-        <p id="messageText">
-          This whole website is basically held together with rubber bands and string, so if you come across anything that
-          seems wrong, or you would like to suggest improvements for future development, please feel free to
-          contact me via email at <strong>mattdroztsi159@gmail.com</strong>. Your support helps makes this resource
-          better!
-        </p>
-
-        <p id="signed">- Matt Drozt</p>
+        <p id="messageText"></p>
+        <p id="signed"></p>
       </div>
 
     </div>
