--- a/templates/edit-design.html
+++ b/templates/edit-design.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <h1>Edit Your Website Design Here</h1>
+    <h1>Edit Your Message Here</h1>
     <hr>
 
     <form action="/control/edit-design" method="POST" id="design_changes">
         <textarea id="message" name="message" rows="4" cols="100"></textarea>
         <br><br>
-        <button type="submit">Submit Changes</button>
+        <button type="submit">Save Changes</button>
     </form>
     <div id="ReturnToControl">
         <h2>Return To Control</h2>
